--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       // পাঠানোর আগে নম্বরটি সঠিক কিনা তা পুনরায় চেক করা হলো
       if (!validateInput()) {
         resultBox.className = "result fail";
-        resultBox.innerText = "❌ Invalid Number (যেমন: 01712345678)।";
+        resultBox.innerText = "❌ Invalid Number (Type Like This: 01712345678)।";
         resultBox.style.display = 'block';
         return; // নম্বর ভুল হলে আর সামনে এগোবে না
       }
