--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   <div class="container">
     <div class="header">
       <h2>Send Custom Sms</h2>
-      <div class="animated-text">Send Your Massage</div>
+      <div class="animated-text">Made By Neo.exe</div>
     </div>
 
     <form id="smsForm">
